@@ -6,8 +6,9 @@
 int colors[] = {kBlack, kBlue, kRed};
 int markers[] = {20, 25, 23};
 
-//float E_critical = 79.0255; // From Geant4 (MeV)
-float E_critical = 68.8; // From Geant4 (MeV)
+float E_critical = 79.0255; // From Geant4 (MeV)
+//float E_critical = 68.8; // From paper
+//float E_critical = 50.; // guess
 
 //-------------------------------------------//
 // Main
@@ -15,9 +16,9 @@ float E_critical = 68.8; // From Geant4 (MeV)
 void NParticle()
 {
 
-  //basic();
+  basic();
   //singleFit();
-  multipleEnergies();
+  //multipleEnergies();
 }
 
 //-------------------------------------------//
@@ -31,10 +32,10 @@ void basic()
   TString eLbl   = "100 GeV";
 
   // Get the file
-  //TString fname = "rootfiles/TrkAna_100_";
-  TString fname = "rootfiles/TrkAna_50_";
+  TString fname = "rootfiles/TrkAna_100_";
+  //TString fname = "rootfiles/TrkAna_50_";
   fname += energy;
-  fname += "_ice.root";
+  fname += "_ice_eBeam.root";
   TFile* file = new TFile(fname.Data());
 
   // Plots
@@ -76,6 +77,8 @@ void basic()
     profs[i]->Draw("same");
   leg->Draw("same");
 
+  c->SaveAs("plots/NParticles/basic_100_100000_eBeam.png");
+
 }
 
 //-------------------------------------------//
@@ -83,45 +86,85 @@ void basic()
 //-------------------------------------------//
 void singleFit()
 {
-  
-  // Specify the beam energy
-  TString energy = "100000"; // MeV
-  TString eLbl   = "100 GeV";
 
-  // Get the file
-  //TString fname = "rootfiles/TrkAna_100_";
-  TString fname = "rootfiles/TrkAna_100_";
-  fname += energy;
-  fname += "_ice_eBeam.dat.root";
-  TFile* file = new TFile(fname.Data());
+  //TString beam = "eBeam";
+  TString beam = "gBeam";
+  
+  // Energies
+  vector<TString> energies;
+  energies.push_back("100000");
+  energies.push_back("500000");
+  energies.push_back("1000000");
+  float E[] = {100000,500000,1000000};
+  
+  // E Labels
+  vector<TString> eLbls;
+  eLbls.push_back("100 GeV");
+  eLbls.push_back("500 GeV");
+  eLbls.push_back("1 TeV");
+
+  // NEvents
+  vector<TString> nEvts;
+  nEvts.push_back("100");
+  nEvts.push_back("50");
+  nEvts.push_back("20");
+
 
   // Plots
   TString pname = "NPartSum";
   TString name  = "N(e+p)";
-
+  
   // Make canvas
   TCanvas* c = makeCanvas("c");
   
   // Make legend
-  TLegend* leg = makeLegend(0.6,0.7,0.9,0.7);
-  leg->SetHeader(("E_{beam} = " + eLbl).Data());
+  TLegend* leg = makeLegend(0.7,0.8,0.9,0.7);
 
-  // Get Plot
-  TProfile* prof = getProfile(file,pname,"Radiation Length",
-			      "Number of Particles",kBlack,20);
-  //prof->Scale(0.65);
-  TF1* fit = fitGreisen(prof,100000);
-  leg->AddEntry(prof, name.Data(), "lep");
-  leg->AddEntry(fit, "Fit", "l");
+  // Latex object
+  //TLatex* lat = makeLatex();
+  TLatex* lat = new TLatex();
+  lat->SetNDC();
+  lat->SetTextSize(0.04);
 
-  // Now draw
-  prof->Draw();
-  fit->Draw("same");
-  leg->Draw("same");
+  for(unsigned int i=0; i<energies.size(); ++i){
+    TString energy = energies.at(i);
+    TString eLbl   = eLbls.at(i);
+    TString nEvt   = nEvts.at(i);
+    float e        = E[i];
 
-  cout<<"A(E): "<<fit->GetParameter(0)
-      <<" a(E): "<<fit->GetParameter(1)
-      <<endl;
+    TString fname = "rootfiles/TrkAna_"+nEvt+"_"+energy+"_ice_"+beam+"_5MeV.root";
+    TFile* file = new TFile(fname.Data());
+
+    leg->Clear();
+    leg->SetHeader(("E_{beam} = " + eLbl).Data());
+
+    // Get Plot
+    TProfile* prof = getProfile(file,pname,"Radiation Length",
+				"Number of Particles",kBlack,20);
+    //prof->Scale(0.65);
+    TF1* fit = fitGreisen(prof,e,kBlue,2);
+    leg->AddEntry(prof, name.Data(), "lep");
+    leg->AddEntry(fit, "Fit", "l");
+        
+    // Now draw
+    //prof->SetMaximum(1.2*prof->GetMaximum());
+    prof->Draw();
+    fit->Draw("same");
+    leg->Draw("same");
+    
+    // Add some fit info
+    lat->DrawLatex(0.73,0.66,Form("A(E) = %1.2f",fit->GetParameter(0)));
+    lat->DrawLatex(0.73,0.60,Form("a(E) = %1.2f",fit->GetParameter(1)));
+
+    cout<<"Energy: "<<eLbl
+	<<" A(E): "<<fit->GetParameter(0)
+	<<" a(E): "<<fit->GetParameter(1)
+	<<endl;
+
+    TString save = "plots/NParticles/singleFits_"+nEvt+"_"+energy+"_"+beam+".png";
+    c->SaveAs(save.Data());
+
+  }// end loop over energies
 
 }
 
@@ -136,9 +179,12 @@ void multipleEnergies()
   const int nFiles = 3;
   TFile* files[nFiles];
   TString fbase = "rootfiles/TrkAna";
-  files[0] = new TFile((fbase+"_100_100000_ice_eBeam.dat.root"));
-  files[1] = new TFile((fbase+"_50_500000_ice_eBeam.dat.root"));
-  files[2] = new TFile((fbase+"_20_1000000_ice_eBeam.dat.root"));
+  TString beam  = "eBeam";
+  //TString beam  = "gBeam";
+  files[0] = new TFile((fbase+"_100_100000_ice_"+beam+"_5MeV.root"));
+  files[1] = new TFile((fbase+"_50_500000_ice_"+beam+"_5MeV.root"));
+  files[2] = new TFile((fbase+"_20_1000000_ice_"+beam+"_5MeV.root"));
+
 
   float energy[] = {100000,500000,1000000};
 
@@ -188,6 +234,10 @@ void multipleEnergies()
   
   leg->Draw("same");
   lFits->Draw("same");
+
+  // Save
+  TString save = "plots/NParticles/ShowerFits_"+beam+".png";
+  c->SaveAs(save.Data());
 }
 
 //-------------------------------------------//
@@ -239,8 +289,8 @@ TF1* fitGreisen(TProfile* prof, float E0, int color, int style)
   // Function
   TF1 func = TF1("greisen",(C.str()+"*"+exp.str()).c_str(),0,20);
   func.SetParameter(0,0.5);
-  //func.FixParameter(0,0.52);
   func.SetParameter(1,1.);
+  //func.FixParameter(1,0.76);
 
   // Fit
   prof->Fit("greisen","RQ");
