@@ -53,9 +53,9 @@ TLatex* makeLatex()
 
   TLatex* lat = new TLatex();
   lat->SetTextSize(0.04);
-  lat->SetNDC();
   lat->SetTextFont(42);
   lat->SetTextColor(kBlack);
+  lat->SetNDC();
   return lat;
 }
 
